# ZugaShield

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  mkdocs.yml  package-lock.json  package.json  promptfooconfig.yaml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: ideas.yml  threat-intel.yml
.github/ISSUE_TEMPLATE/: bypass-report.yml  false-positive.yml  feature-request.yml  new-signature.yml
.github/workflows/: ci.yml  release.yml  security-scan.yml
docs/: index.md
docs/api/: reference.md
docs/architecture/: layers.md  ml-detection.md  overview.md  owasp-asi.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/integrations/: approval.md  fastapi.md  flask.md  langchain.md  mcp.md  openclaw.md  starlette.md
docs/layers/: anomaly-detector.md  exfiltration-guard.md  memory-sentinel.md  perimeter.md  prompt-armor.md  tool-guard.md  wallet-fortress.md
docs/ml/: onnx.md  supply-chain.md  tfidf.md  training.md
docs/security/: red-team.md  threat-catalog.md  threat-feed.md
examples/: basic_usage.py  custom_layer.py  fastapi_middleware.py  flask_integration.py  langchain_integration.py  mcp_integration.py  test_it_yourself.py
plugins/openclaw/: LICENSE  README.md  SKILL.md  openclaw.plugin.json  package-lock.json  package.json
plugins/openclaw/.github/workflows/: ci.yml
plugins/openclaw/src/: preflight.ts  shield-client.ts
promptfoo/configs/: model-comparison.yaml  prompt-robustness.yaml
promptfoo/datasets/: benign_inputs.yaml  encoding_evasion.yaml  injection_attacks.yaml  redteam_generated.yaml  unicode_smuggling.yaml
promptfoo/scripts/: convert_tests.py  promptfoo_provider.py
tests/: conftest.py  test_catalog.py  test_mcp.py  test_redteam.py
tests/benchmarks/: test_performance.py
tests/coverage/: conftest.py  test_combined.py  test_deepset.py  test_gandalf.py
tests/integration/: test_feed_e2e.py  test_framework_adapters.py
tests/redteam/: test_exfiltration.py  test_memory.py  test_ml_injection.py  test_prompt_injection.py  test_tool_guard.py  test_wallet.py
tests/unit/: test_config.py  test_config_mutations.py  test_feed.py  test_ml_detector.py  test_new_layers.py  test_shield.py  test_types.py  test_types_mutations.py
zugashield/: __init__.py  audit.py  config.py  multimodal.py  threat_catalog.py  types.py
zugashield/feed/: __init__.py  checker.py  downloader.py  packager.py  pubkey.py  signer.py  state.py  updater.py
zugashield/integrations/: __init__.py  approval.py  crewai.py  fastapi.py  flask.py  langchain.py  llamaindex.py  mcp.py  starlette.py
zugashield/layers/: __init__.py  anomaly_detector.py  base.py  code_scanner.py  cot_auditor.py  exfiltration_guard.py  llm_judge.py  mcp_guard.py  memory_sentinel.py  ml_detector.py  perimeter.py  prompt_armor.py  tool_guard.py  wallet_fortress.py
zugashield/ml/: __init__.py  benchmark_configs.py  cli.py  distill.py  features.py  train_tfidf.py
zugashield/signatures/: ascii_art.json  catalog_version.json  exfiltration.json  integrity.json  memory_poisoning.json  prompt_injection.json  tool_exploitation.json  unicode_smuggling.json  wallet_attacks.json
zugashield_mcp/: __init__.py  server.py
